# kite

./: .gitignore  Cargo.toml  LICENSE  build.rs  kite.toml  rustfmt.toml
.github/workflows/: check.yaml  check.yml
core/: error.rs  kite.toml  main.rs
core/mood/: event.rs  events.rs  events.toml  interactions.toml  mod.rs
core/system/: mod.rs
core/vad/: mod.rs
crates/cereal/: Cargo.toml  mood.capnp  openai_request.capnp
crates/cereal/src/: lib.rs  mood_capnp.rs  openai_request_capnp.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: interning.rs  lib.rs
crates/common/src/env/: error.rs  mod.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: error.rs  lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: error.rs  lib.rs
